back button design added for entity page and stepper alignment fixed

--- a/src/app/user-onboard/entity-details-page/entity-details-page.component.css
+++ b/src/app/user-onboard/entity-details-page/entity-details-page.component.css
@@ -1,6 +1,6 @@
-.app-business-card-container {
+/* .app-business-card-container {
   margin-bottom: 10px;
-}
+} */
 
 .entity-details-next-button {
   height: 40px;
